CHOI_Portfolio_ver1.1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHOI Portfolio: 크롬에 최적화되어 있습니다. </title>
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="./images/favicon.ico">
     <!-- 공통 기본 서식  -->
     <link rel="stylesheet" href="css/menu.css">	
     <!-- 기본 서식 -->
@@ -22,10 +22,10 @@
     <nav id="main-navigation" class="nav-main" style="z-index: 99;">
       <ul class="menu">
         <li class="menu__item">
-          <a class="menu__link" href="/index.html">Home</a>
+          <a class="menu__link" href="./index.html">Home</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="/sub/about.html">About</a>
+          <a class="menu__link" href="./sub/about.html">About</a>
         </li>
         <!-- <li class="menu__item">
           <a class="menu__link" href="/sub/experience.html">Experience</a>
@@ -42,7 +42,7 @@
           </ul> 
         </li> -->
         <li class="menu__item">
-          <a class="menu__link" href="/sub/project.html">Project</a>
+          <a class="menu__link" href="./sub/project.html">Project</a>
           <!-- <ul class="submenu">
             <li class="menu__item">
               <a class="menu__link" href="#0">Print Design</a>
@@ -70,7 +70,7 @@
               <p class="title">WEB DEVELOPER<br>PORTFOLIO</p>
               <p class="name">CHOI<br>YE-RIM<br></p>
               <p class="text">2020 WEB DEVELOPER | JAVA | DataBase | HTML5 | CSS3 | Javascript | JQuery | Servlet | JSP | Spring | myBATIS </p>
-              <p class="contact">|  yerimchoi_@naver.com <a href="https://github.com/Yerim-Choi" target="_blank"><img src="/images/git_icon.png" style="width: 120px;"></a></p>
+              <p class="contact">|  yerimchoi_@naver.com <a href="https://github.com/Yerim-Choi" target="_blank"><img src="./images/git_icon.png" style="width: 120px;"></a></p>
           </div>
 
       </div>
