--- a/sub/experience.html
+++ b/sub/experience.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHOI Portfolio: 크롬에 최적화되어 있습니다. </title>
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="./images/favicon.ico">
     <!-- 공통 기본 서식  -->
     <link rel="stylesheet" href="../css/menu.css">	
     <!-- 기본 서식 -->
@@ -22,13 +22,13 @@
     <nav id="main-navigation" class="nav-main" style="z-index: 99;">
       <ul class="menu">
         <li class="menu__item">
-          <a class="menu__link" href="/index.html">Home</a>
+          <a class="menu__link" href="./index.html">Home</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="/sub/about.html">About</a>
+          <a class="menu__link" href="./sub/about.html">About</a>
         </li>
         <!-- <li class="menu__item">
-          <a class="menu__link" href="/sub/experience.html">Experience</a>
+          <a class="menu__link" href="./sub/experience.html">Experience</a>
           <ul class="submenu">
             <li class="menu__item">
               <a class="menu__link" href="#0">Burger King</a>
@@ -42,7 +42,7 @@
           </ul> 
         </li> -->
         <li class="menu__item">
-          <a class="menu__link" href="/sub/project.html">Project</a>
+          <a class="menu__link" href="./sub/project.html">Project</a>
           <!-- <ul class="submenu">
             <li class="menu__item">
               <a class="menu__link" href="#0">Print Design</a>
