--- a/sub/project5.html
+++ b/sub/project5.html
@@ -6,12 +6,10 @@
     <title>CHOI Portfolio: 크롬에 최적화되어 있습니다. </title>
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="./images/favicon.ico">
-    <!-- 파비콘 -->
-    <link rel="shortcut icon" href="./images/favicon.ico">
     <!-- 공통 기본 서식  -->
-    <link rel="stylesheet" href="./css/menu.css">	
+    <link rel="stylesheet" href="./../css/menu.css">	
     <!-- 기본 서식 -->
-	  <link rel="stylesheet" href="./css/main.css">	
+	  <link rel="stylesheet" href="./../css/main.css">	
 </head>
 <body>
 
