--- a/sub/project4.html
+++ b/sub/project4.html
@@ -7,9 +7,9 @@
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="./images/favicon.ico">
     <!-- 공통 기본 서식  -->
-    <link rel="stylesheet" href="./css/menu.css">	
+    <link rel="stylesheet" href="./../css/menu.css">	
     <!-- 기본 서식 -->
-	  <link rel="stylesheet" href="./css/main.css">	
+	  <link rel="stylesheet" href="./../css/main.css">	
 </head>
 <body>
 
