CHOI_Portfolio_ver1.3

--- a/sub/project2.html
+++ b/sub/project2.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHOI Portfolio: 크롬에 최적화되어 있습니다. </title>
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="./images/favicon.ico">
+    <link rel="shortcut icon" href="./../images/favicon.ico">
     <!-- 공통 기본 서식  -->
-    <link rel="stylesheet" href="./css/menu.css">	
+    <link rel="stylesheet" href="./../css/menu.css">	
     <!-- 기본 서식 -->
-	  <link rel="stylesheet" href="./css/main.css">	
+	  <link rel="stylesheet" href="./../css/main.css">	
 </head>
 <body>
 
@@ -22,10 +22,10 @@
     <nav id="main-navigation" class="nav-main" style="z-index: 99;">
       <ul class="menu">
         <li class="menu__item">
-          <a class="menu__link" href="./index.html">Home</a>
+          <a class="menu__link" href="./../index.html">Home</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="./sub/about.html">About</a>
+          <a class="menu__link" href="./about.html">About</a>
         </li>
         <!-- <li class="menu__item">
           <a class="menu__link" href="./sub/experience.html">Experience</a>
@@ -42,7 +42,7 @@
           </ul> 
         </li> -->
         <li class="menu__item">
-          <a class="menu__link" href="./sub/project.html">Project</a>
+          <a class="menu__link" href="./project.html">Project</a>
           <!-- <ul class="submenu">
             <li class="menu__item">
               <a class="menu__link" href="#0">Print Design</a>
@@ -70,12 +70,12 @@
 
         <div id="project_page_left">
             <ul class='project_list'>
-                <li><a href="./sub/project.html"><span>01&nbsp;&nbsp;&nbsp;</span> Hotel Console Program</a></li>
-                <li class="select"><a href="./sub/project2.html"><span>02&nbsp;&nbsp;&nbsp;</span> library Console Program</a></li>
-                <li><a href="./sub/project3.html"><span>03&nbsp;&nbsp;&nbsp;</span> Center Console Program</a></li>
-                <li><a href="./sub/project4.html"><span>04&nbsp;&nbsp;&nbsp;</span> Real estate WebSite Project</a></li>
-                <li><a href="./sub/project5.html"><span>05&nbsp;&nbsp;&nbsp;</span> Website Event Page</a></li>
-                <li><a href="./sub/project6.html"><span>06&nbsp;&nbsp;&nbsp;</span> Mobile UI/UX</a></li>
+                <li><a href="./project.html"><span>01&nbsp;&nbsp;&nbsp;</span> Hotel Console Program</a></li>
+                <li class="select"><a href="./project2.html"><span>02&nbsp;&nbsp;&nbsp;</span> library Console Program</a></li>
+                <li><a href="./project3.html"><span>03&nbsp;&nbsp;&nbsp;</span> Center Console Program</a></li>
+                <li><a href="./project4.html"><span>04&nbsp;&nbsp;&nbsp;</span> Real estate WebSite Project</a></li>
+                <li><a href="./project5.html"><span>05&nbsp;&nbsp;&nbsp;</span> Website Event Page</a></li>
+                <li><a href="./project6.html"><span>06&nbsp;&nbsp;&nbsp;</span> Mobile UI/UX</a></li>
             </ul>  
             
             <p class="title">Library<br> Console Program
@@ -86,7 +86,7 @@
 
         <div id="project_page_right">
             <div id="image_area">
-                <img src="./images/project02.png">
+                <img src="./../images/project02.png">
             </div>
 
             <div id="list_area">
@@ -100,14 +100,14 @@
                         기획 / 요구사항 분석 / 데이터 구조 설계 / JAVA / SQL / ERD</li>
                 </ul>
                 <ul class="image_list">
-                    <li><img src="./images/project02_1.png"></li>
-                    <li><img src="./images/project02_2.png"></li>
-                    <li><img src="./images/project02_3.png"></li>
-                    <li><img src="./images/project02_4.png"></li>
-                    <li><img src="./images/project02_5.png"></li>
-                    <li><img src="./images/project02_6.png"></li>
-                    <li><img src="./images/project02_7.png"></li>
-                    <li><img src="./images/project02_8.png"></li>
+                    <li><img src="./../images/project02_1.png"></li>
+                    <li><img src="./../images/project02_2.png"></li>
+                    <li><img src="./../images/project02_3.png"></li>
+                    <li><img src="./../images/project02_4.png"></li>
+                    <li><img src="./../images/project02_5.png"></li>
+                    <li><img src="./../images/project02_6.png"></li>
+                    <li><img src="./../images/project02_7.png"></li>
+                    <li><img src="./../images/project02_8.png"></li>
                 </ul>
             </div>
             
