--- a/sub/project6.html
+++ b/sub/project6.html
@@ -22,7 +22,7 @@
     <nav id="main-navigation" class="nav-main" style="z-index: 99;">
       <ul class="menu">
         <li class="menu__item">
-          <a class="menu__link" href="./index.html">Home</a>
+          <a class="menu__link" href="./../index.html">Home</a>
         </li>
         <li class="menu__item">
           <a class="menu__link" href="./sub/about.html">About</a>
