CHOI_Portfolio_ver1.4

--- a/sub/about.html
+++ b/sub/about.html
@@ -96,13 +96,16 @@
 
       <div class="skill_right">
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       </div>
 
@@ -113,22 +116,54 @@
     <div id="about_section_skill">
 
       <div class="skill_left">
-      <p class="skil_title">Back-end</p>
+      <p class="skil_title">DataBase</p>
       </div>
 
       <div class="skill_right">
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 익숙합니다. 웹 접근성은 아직 깊게 공부하지는 못했습니다.</span>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
       </p>
       </div>
 
     </div>
+
+
+
+    <!-- Server -->
+    <div id="about_section_skill">
+
+      <div class="skill_left">
+      <p class="skil_title">Server</p>
+      </div>
+
+      <div class="skill_right">
+      <p class="skil_name">HTML5<br>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      </p>
+      <p class="skil_name">HTML5<br>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      </p>
+      <p class="skil_name">HTML5<br>
+        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      </p>
+      </div>
+
+    </div>
+
+
+
 
 
 
