CHOI_Portfolio_ver1.5

--- a/sub/project5.html
+++ b/sub/project5.html
@@ -103,7 +103,7 @@
                     <li><img src="./../images/project05_1.png"></li>
                     <li><img src="./../images/project05_2.png"></li>
                     <li><img src="./../images/project05_3.png"></li>
-                    <li><img src=" /../images/project05_4.png"></li>
+                    <li><img src="./../images/project05_4.png"></li>
                 </ul>
             </div>
             
