CHOI_Portfolio_ver1.6

--- a/sub/about.html
+++ b/sub/about.html
@@ -79,8 +79,8 @@
             <br>
             <br>
             <p class="subtext">
-              디자인씽킹(Design Thinking)을 통해 더 나은 발상과 전략을 세우고,<br>
-              정확한 목표와 논리에 근거하여 이해와 공감 중심의 좋은 디자인을 통해<br>
+              <!--디자인씽킹(Design Thinking)을 통해 더 나은 발상과 전략을 세우고,<br> -->
+              정확한 목표와 논리에 근거하여 이해와 공감 중심의 좋은 개발을 통해<br>
               가치 있는 경험을 전달할 수 있는 개발자를 꿈꿉니다.
             </p>
         </div>
