CHOI_Portfolio_ver2.0

--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
       <div id="page_inner">
         
           <div id="text_area">
-              <p class="year">2020</p>
-              <p class="title">WEB DEVELOPER<br>PORTFOLIO</p>
+              <p class="year"></p>
+              <!-- <p class="title">WEB DEVELOPER<br>PORTFOLIO</p> -->
+              <p class="title"><a href="./index.html">Home</a></p>
+              <p class="title"><a href="./sub/about.html">About</a></p>
+              <p class="title"><a href="./sub/project.html">Project</a></p>
+              <!-- <p class="title">Experience</p> -->
               <p class="name">CHOI<br>YE-RIM<br></p>
               <p class="text">2020 WEB DEVELOPER | JAVA | DataBase | HTML5 | CSS3 | Javascript | JQuery | Servlet | JSP | Spring | myBATIS </p>
               <p class="contact">|  yerimchoi_@naver.com <a href="https://github.com/Yerim-Choi" target="_blank"><img src="./images/git_icon.png" style="width: 120px;"></a></p>
