--- a/sub/about.html
+++ b/sub/about.html
@@ -95,17 +95,15 @@
       </div>
 
       <div class="skill_right">
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">HTML5 <img src="./../images/html5.png" style="height: 35px;"><br>
+        <span>웹 프로젝트 환경설정을 통해 Markup Language 기본개념을 이해하였으며, 기본적인 웹 페이지 레이아웃 구성을 구현할 수 있습니다.
+          웹 접근성과 시맨틱한 마크업에 대해 숙지하고 있으며 관심이 있습니다.</span>
       </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">CSS3 <img src="./../images/css3.png" style="height: 35px;"><br>
+        <span>CSS3의 구조와 선택자의 개념일 이해하였습니다. 디자인 속성과 해당 속성값을 정의하여 웹페이지에 원하는 스타일로 구현할 수 있습니다.</span>
       </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">Javascript <img src="./../images/javascript.png" style="height: 35px;"><br>
+        <span> 기본 문법과 함수, 객체 개념을 이해하였으며 BOM, DOM jQuery 이벤트를 이용하여 DOM을 조작 경험이 있습니다. </span>
       </p>
       </div>
 
@@ -113,24 +111,16 @@
 
 
     <!-- Backend -->
-    <div id="about_section_skill">
+    <div id="about_section_skill" style="margin-bottom: 20px;">
 
       <div class="skill_left">
-      <p class="skil_title">DataBase</p>
+      <p class="skil_title">DB</p>
       </div>
 
       <div class="skill_right">
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
-      </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
-      </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">DataBase<br>
+        <span>데이터베이스에 대한 기본 개념과 정규화, 트랙잭션을 이해하였습니다. 기본적인 CRUD 쿼리를 작성할 수 있으며 각종 join을 다뤄 집계 쿼리, group by등을 사용할 수 있습니다.
+          </span>
       </p>
       </div>
 
@@ -146,17 +136,19 @@
       </div>
 
       <div class="skill_right">
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">JAVA <img src="./../images/java.png" style="height: 35px;"><br>
+        <span>JAVA의 기본구조와 데이터타입, 기본 출력, 연산자의 개념을 이해하였습니다. 
+          개발 환경 설치 / 변수와 상수 / 기본 입출력 / 연산자 / 제어문
+          배열 / 메소드 / 객체화와 static / 클래스와 객체 / 추상클래스와 인터페이스
+          예외처리 / 라이브러리와 API / MVC 모델 / 파일 입출력 / 쓰레드와 동기화</span>
       </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">Servlet/JSP <img src="./../images/jsp.png" style="height: 35px;"><br>
+        <span>서블릿 구현 및 실행, 서블릿 라이프 사이클을 이해하였습니다.
+          Controller, Model 구현을 통해 요청정보와 응답정보 처리, 
+          파일 업로드 처리와 기본 CRUD 게시판을 제작 경험이 있습니다. </span>
       </p>
-      <p class="skil_name">HTML5<br>
-        <span>HTML 마크업 코딩만 봤을때는 시멘틱 마크업을 짜고, 웹 표준을 준수하고, 반응형웹에 대해 작업을 해보았습니다. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Ea porro nam recusandae eligendi tenetur doloribus libero beatae deserunt rerum sequi quasi odit voluptates atque numquam labore quae, ex quisquam quaerat!</span>
+      <p class="skil_name">Spring 4.0 /myBATIS <img src="./../images/spring.png" style="height: 35px;"><br>
+        <span>스프링 개발 환경을 구축 myBATIS 연동 및 MVC 구성 설정 및 테스트 개념을 이해하였습니다. Maven을 이용한 라이브러리 자동 빌드 처리</span>
       </p>
       </div>
 
