CHOI_Portfolio_ver2.2

--- a/sub/about.html
+++ b/sub/about.html
@@ -88,7 +88,7 @@
 
 
     <!-- Front -->
-    <div id="about_section_skill">
+    <div id="about_section_skill" style="margin-bottom: 200px;">
 
       <div class="skill_left">
       <p class="skil_title">Front-end</p>
@@ -96,14 +96,24 @@
 
       <div class="skill_right">
       <p class="skil_name">HTML5 <img src="./../images/html5.png" style="height: 35px;"><br>
-        <span>웹 프로젝트 환경설정을 통해 Markup Language 기본개념을 이해하였으며, 기본적인 웹 페이지 레이아웃 구성을 구현할 수 있습니다.
-          웹 접근성과 시맨틱한 마크업에 대해 숙지하고 있으며 관심이 있습니다.</span>
+        <span>
+          웹 페이지의 기본 구조를 파악하고 작성할 수 있습니다. 기본 태그와 공간 분할태그, 시맨틱 태그, 멀티 미디어 태그,
+          입력 양식 태그 등 웹 표준을 사용해 웹 페이지를 구성하는 작업을 반복하여 레이아웃을 구성할 수 있습니다
+          </span>
       </p>
       <p class="skil_name">CSS3 <img src="./../images/css3.png" style="height: 35px;"><br>
-        <span>CSS3의 구조와 선택자의 개념일 이해하였습니다. 디자인 속성과 해당 속성값을 정의하여 웹페이지에 원하는 스타일로 구현할 수 있습니다.</span>
+        <span>
+          CSS3의 구조와 선택자의 개념을 이해하였습니다. 디자인 속성과 해당 속성값을 정의하여 HTML5로 구성되어있는 레이아웃의 웹페이지에 원하는 스타일을 적용하여 구현할 수 있습니다.
+          부트스트랩의 프레임워크를 사용하여 게시판 페이지 구현 경험이 있으며, 반응형 페이지 개념 이해와  웹접근성에 관심이 있습니다. 
+        </span>
       </p>
       <p class="skil_name">Javascript <img src="./../images/javascript.png" style="height: 35px;"><br>
-        <span> 기본 문법과 함수, 객체 개념을 이해하였으며 BOM, DOM jQuery 이벤트를 이용하여 DOM을 조작 경험이 있습니다. </span>
+        <span> 
+          자바스크립트의 기본 내용과 jQuery 라이브러리의 개념을 이해하였습니다. 자바스크립트를 사용해 문서 객체를 
+          조작하는 작업을 중심으로 클라이언트 페이지를 구현하는 작업을 주로 프로젝트 때 진행하였습니다. jQuery 애니메이션 등을
+          활용하여 동적인 페이지 작업 경험이 있습니다.
+
+        </span>
       </p>
       </div>
 
@@ -111,7 +121,7 @@
 
 
     <!-- Backend -->
-    <div id="about_section_skill" style="margin-bottom: 20px;">
+    <div id="about_section_skill" style="margin-bottom: -120px;">
 
       <div class="skill_left">
       <p class="skil_title">DB</p>
@@ -119,8 +129,11 @@
 
       <div class="skill_right">
       <p class="skil_name">DataBase<br>
-        <span>데이터베이스에 대한 기본 개념과 정규화, 트랙잭션을 이해하였습니다. 기본적인 CRUD 쿼리를 작성할 수 있으며 각종 join을 다뤄 집계 쿼리, group by등을 사용할 수 있습니다.
-          </span>
+        <span>
+        데이터베이스에 대한 기본 개념과 정규화, 트랙잭션을 이해하였습니다. 기본적인 CRUD 쿼리를 작성할 수 있으며 각종 join을 다뤄 집계 쿼리, group by등을 사용할 수 있습니다.
+        프로젝트를 진행할 시 사용자 요구 분석 후 모델링을 통해 erd 테이블을 생성하고 정규화 작업을 하였습니다. 데이터의 중복을 줄이고 무결성을 향상시키는 
+        정규화의 개념에 대해 관심이 있으며 효율적으로 다루기 위해 학습중입니다.
+        </span>
       </p>
       </div>
 
@@ -137,18 +150,24 @@
 
       <div class="skill_right">
       <p class="skil_name">JAVA <img src="./../images/java.png" style="height: 35px;"><br>
-        <span>JAVA의 기본구조와 데이터타입, 기본 출력, 연산자의 개념을 이해하였습니다. 
-          개발 환경 설치 / 변수와 상수 / 기본 입출력 / 연산자 / 제어문
-          배열 / 메소드 / 객체화와 static / 클래스와 객체 / 추상클래스와 인터페이스
-          예외처리 / 라이브러리와 API / MVC 모델 / 파일 입출력 / 쓰레드와 동기화</span>
+        <span>
+          자바의 기본 프로그램 개발 환경 구축부터 프로그램의 개발 순서를 파악하였습니다. 자바를 포함한 객체 지향 프로그래밍에서 핵심인
+          클래스와 상속 문법을 기반으로 학습하였습니다. 자료구조, 병렬처리 등 데이터를 다루는 문법과 특성을 이해할 수 있도록
+          자바 기반의 콘솔 프로젝트 작업을 진행하였습니다.</span>
       </p>
       <p class="skil_name">Servlet/JSP <img src="./../images/jsp.png" style="height: 35px;"><br>
-        <span>서블릿 구현 및 실행, 서블릿 라이프 사이클을 이해하였습니다.
-          Controller, Model 구현을 통해 요청정보와 응답정보 처리, 
-          파일 업로드 처리와 기본 CRUD 게시판을 제작 경험이 있습니다. </span>
+        <span>
+          Servlet & JSP의 동작원리를 도식화로 직접 표현하며 구현 방법을 이해하였습니다. 정적인 페이지와
+          동적인 페이지의 차이를 파악하여 기초 문법을 공부하였습니다. JDBC로 데이터베이스를 연동하여 기본 SQL문으로
+          CRUD가 가능한 게시판과 파일 업로드 처리 제작 경험이 있습니다.
+        </span>
       </p>
       <p class="skil_name">Spring 4.0 /myBATIS <img src="./../images/spring.png" style="height: 35px;"><br>
-        <span>스프링 개발 환경을 구축 myBATIS 연동 및 MVC 구성 설정 및 테스트 개념을 이해하였습니다. Maven을 이용한 라이브러리 자동 빌드 처리</span>
+        <span>
+          스프링 개발 환경을 구축 myBATIS 연동 및 MVC 구성 설정 및 테스트 개념을 이해하였습니다. Java Configuration과 어노테이션 기반의 설정을 이용할 수 있습니다.
+          Lombok 라이브러리를 활용해서 Getter/Setter 등의 코드를 줄여서 최소한의 코드로 프로젝트를 작성합니다. MyBatis의 Mapper 인터페이스와 XML을
+          활용하여 기존의 DAO를 이용하던 개발 방식을 개선해서 더 적은양의 코드로 개발을 할 수 있습니다. 
+        </span>
       </p>
       </div>
 
